[package]
name = "relay-node"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = {version= "^0.53", features = ["full"]}
tokio = { version = "1.29.1", features = ["full"] }
serde = "1.0.175"
serde_json = "1.0.103"
rand = "0.8.5"
sp-core = "^27.0"
bip39 = "^2.0"
seed15 = "^0.1"
crossterm = "0.27.0"
reqwest = "0.11.22"
windows-service = "0.6.0"
async-std = "1.12.0"
axum = "0.7.2"
axum-server = {version= "^0.6", features= ["tls-rustls"]}
tower-http = {version = "^0.5", features = ["full"]}
public-ip = "0.2.2"
serde_with = "^3.3"
rust_decimal = "^1.33"
# openssl = "0.10.59"
# openssl-sys = "0.9.95"
