[package]
name = "relay-node"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = {version= "^0.53", features = ["full"]}
tokio = { version = "1.29.1", features = ["full"] }
serde = "1.0.175"
serde_json = "1.0.103"
rand = "0.8.5"
sp-core = "^30.0"
bip39 = "^2.0"
seed15 = "^0.1"
crossterm = "0.27.0"
reqwest = {version = "0.11.22", features = ["json", "stream"]}
windows-service = "0.6.0"
async-std = "1.12.0"
axum = {version = "0.7.2", features = ["ws"]}
axum-server = {version= "^0.6", features= ["tls-openssl"]}
tower-http = {version = "^0.5", features = ["full"]}
tower = {version = "^0.4", features = ["full"]}
public-ip = "0.2.2"
serde_with = "^3.3"
rust_decimal = "^1.33"
futures-util = "0.3.30"
tokio-stream = {version = "0.1.14", features = ["fs"]}
mongodb = {version= "^3.0"}
sha2 = "^0.10"
chrono = "^0.4"
tokio-util = "0.7.10"
zip = "0.6.6"
once_cell = "1.19.0"
futures = "0.3.30"
async-stream = "0.3.5"
